added titles for boxes

--- a/src/frontend/views/store.html
+++ b/src/frontend/views/store.html
@@ -118,44 +118,44 @@
           <div class="section-items">
             <div class="subsection">
               <div class="diagram">
-                a
+                ABC Analaysis
               </div>
             </div>
             <div class="subsection">
               <div class="diagram">
-                b
-              </div>
-            </div>
-          </div>
-          <div class="section-items">
-            <div class="subsection">
-              <div class="diagram">
-                c
+                orderedPizzaSizes
               </div>
             </div>
           </div>
           <div class="section-items">
             <div class="subsection">
               <div class="diagram">
-                d
-              </div>
-            </div>
-            <div class="subsection">
-              <div class="diagram">
-                e
+                pizzaRanking
               </div>
             </div>
           </div>
           <div class="section-items">
             <div class="subsection">
               <div class="diagram">
-                f
+                Pizza Pairs
+              </div>
+            </div>
+            <div class="subsection">
+              <div class="diagram">
+                Taste Correlation
+              </div>
+            </div>
+          </div>
+          <div class="section-items">
+            <div class="subsection">
+              <div class="diagram">
+                Relationship between price and popularity of pizzas
               </div>
             </div>
           </div>
         </div>
-        <!--End of section a-->
-        <!--section b-->
+        <!--End of Pizza section-->
+        <!--Forecast section-->
         <!--TODO-->
         <div class="subsection" style="
         padding: 0px; 
@@ -174,19 +174,19 @@
                   <!--TODO options TODAY, TOMORROW, MONDAY, TUESDAY, etc.-->
                   <button class="infobox">TODAY</button>
                 </div>
-                <h1 class="centered">section b</h1>
+                <h1 class="centered">Forecast</h1>
               </div>
               <div class="section-items">
                 <div class="subsection">
                   <div class="diagram">
-                    g
+                    Order Prediction
                   </div>
                 </div>
               </div>
               <div class="section-items">
                 <div class="subsection">
                   <div class="diagram">
-                    h
+                    Ingredient Prediction  
                   </div>
                 </div>
               </div>
@@ -216,16 +216,16 @@
             margin-bottom: 0px;
             margin-left: 0px;
             margin-right: 0px;">
-              <h1>section c</h1>
+              <h1>Customer</h1>
               <div class="section-items">
                 <div class="subsection">
                   <div class="diagram">
-                    i
+                    ABC Analaysis
                   </div>
                 </div>
                 <div class="subsection">
                   <div class="diagram">
-                    j
+                   Quality
                   </div>
                 </div>
               </div>
