--- a/src/frontend/views/store.html
+++ b/src/frontend/views/store.html
@@ -12,7 +12,7 @@
 
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
   
-  <script src="/static/echarts/infographic.js"></script>
+  <script src="/static/echarts/infographic.js"type="text/javascript"></script>
   <script src="/static/echarts/echarts.js"></script>
   <script src="/static/charts/charts.js" type="text/javascript"></script>
 
@@ -270,8 +270,7 @@
         }
       </script>
       <script>
-        const map = L.map('map').setView([37.7749, -122.4194], 5);
-        storeLocationMap();
+        
       </script>
 </body>
 
