chore: Refactor UI initialization and remove redundant code

--- a/src/frontend/views/franchise.html
+++ b/src/frontend/views/franchise.html
@@ -200,8 +200,8 @@
     <script>
       const map = L.map('map', {attributionControl: false}).setView([39, -120], 5);
       storeLocationMap();
-      sideBar();
-      statOverview();
+      
+      //statOverview();
       avCustomer();
       pizzaPopularity();
       revenueChart();
