--- a/src/frontend/views/store.html
+++ b/src/frontend/views/store.html
@@ -16,8 +16,8 @@
   <script src="/static/echarts/echarts.js"></script>
   <script src="/static/charts/charts.js" type="text/javascript"></script>
 
-  <script src="/static/charts/storeCharts.js" type="module"></script>
-  <script src="/static/UI/ui.js" type="module"></script>
+  <script src="/static/charts/storeCharts.js" type="text/javascript"></script>
+  <script src="/static/UI/ui.js" type="text/javascript"></script>
 
   <script type="text/javascript" src="/static/echarts/echarts.min.js"></script>
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
@@ -269,9 +269,7 @@
           }
         }
       </script>
-      <script>
-        
-      </script>
+      
 </body>
 
 </html>
