--- a/src/frontend/views/franchise.html
+++ b/src/frontend/views/franchise.html
@@ -1,210 +1,202 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-     <!--MAIN SEITE FÜR DIE GESAMTE FIRMA !-->
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="/style/main.css" />
-    <link rel="stylesheet" type="text/css" href="/style/container.css" />
-    <link rel="stylesheet" type="text/css" href="/style/diagram.css" />
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap"/>
-  
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
 
-    <script src="/static/echarts/echarts.js"></script>
-    <script src="/static/charts/charts.js" type="text/javascript"></script>
-    <script src="/static/charts/generalChart.js" type="module"></script>
+<head>
+  <!--MAIN SEITE FÜR DIE GESAMTE FIRMA !-->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" type="text/css" href="/style/main.css" />
+  <link rel="stylesheet" type="text/css" href="/style/container.css" />
+  <link rel="stylesheet" type="text/css" href="/style/diagram.css" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap" />
 
-    <script src="/static/charts/storeCharts.js" type="module"></script>
-    <script src="/static/UI/ui.js" type="module"></script>
+  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
 
-    <script type="text/javascript" src="/static/echarts/echarts.min.js"></script>
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-    <script type="text/javascript" src="/static/UI/ui.js"></script>
-    
+  <script src="/static/echarts/echarts.js"></script>
+  <script src="/static/charts/charts.js" type="text/javascript"></script>
+  <script src="/static/charts/generalChart.js" type="module"></script>
 
-    <title>Document</title>
-  </head>
-  <body>
-    <button class="openbtn" onclick="toggleSidebar()">☰</button>
-    <a id="companyname" href="/">@ PizzaHub</a>
-    <div id="user">
-      <h1>Sebastian Bremm</h1>
-      <p>Programming Lab Professor</p>
+  <script src="/static/charts/storeCharts.js" type="module"></script>
+  <script src="/static/UI/ui.js" type="module"></script>
+
+  <script type="text/javascript" src="/static/echarts/echarts.min.js"></script>
+  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+  <script type="text/javascript" src="/static/UI/ui.js"></script>
+
+
+  <title>Document</title>
+</head>
+
+<body>
+  <button class="openbtn" onclick="toggleSidebar()">☰</button>
+  <a id="companyname" href="/">@ PizzaHub</a>
+  <div id="user">
+    <h1>Sebastian Bremm</h1>
+    <p>Programming Lab Professor</p>
+  </div>
+  <img id="icon" src="/img/icon.png">
+  <div id="topbar" onclick="toggleSidebar(true)">
+    <div class="btnbox">
+      <button class="btn" id="Last-Month" onclick="mtd();">MTD</button>
+      <button class="btn" id="Last-Quarter" onclick="qtd();">QTD</button>
+      <button class="btn" id="Last-Year" onclick="ytd();">YTD</button>
+      <button class="btn" id="customDate">PTD</button>
+      <input type="date" id="datePicker" style="display: none;">
     </div>
-    <img id="icon" src="/img/icon.png">
-    <div id="topbar" onclick="toggleSidebar(true)">
-      <div class="btnbox">
-        <button class="btn" id ="MTD">MTD</button>
-        <button class="btn" id="QTD">QTD</button>
-        <button class="btn"id= "YTD">YTD</button>
-        <button class="btn" id="customDate">PTD</button>
-        <input type="date" id="datePicker" style="display: none;">
-      </div>
-      <div class="btnbox">
-        <button class="infobox"id = "FROM">FROM: XX-XX-XXXX</button>
-        <button class="infobox">TO: 31-12-2022</button>
-        <button class="infobox"id = "PERIOD">PERIOD: XXDAYS</button>
-      </div>
-      <!--<div class="customdate" id="customDateForm">
-        <form id="dateForm">
-          <input type="date" id="startDate" name="startDate" value="2022-12-01" required>
-          <button id="customDate">Custom Date</button>
-        </form>
-      </div>-->
+    <div class="btnbox">
+      <button class="infobox" id="FROM">FROM: XX-XX-XXXX</button>
+      <button class="infobox">TO: 31-12-2022</button>
+      <button class="infobox" id="PERIOD">PERIOD: XXDAYS</button>
     </div>
+  </div>
 
-    <div id="sidebar" class="sidebar">
-      <!-- Store links will be dynamically added here -->
-    
-    </div>
-    <div id="main" class="main" onclick="toggleSidebar(true)">
-      <div id="content">
+  <div id="sidebar" class="sidebar">
+    <!-- Store links will be dynamically added here -->
+
+  </div>
+  <div id="main" class="main" onclick="toggleSidebar(true)">
+    <div id="content">
       <!-- Put content here -->
       <!--Stats section-->
-        <div class="section-items">
-          <div class="section">
-            <h1>Stats</h1>
-            <div class="section-items">
-              <!--PizzaHub-->
-              <div class="subsection">
-                <h1  data-tooltip="This section shows the general data of the PizzaHub Franchise">PizzaHub</h1>
-               <!-- <div id="statsOverview" class="diagram"></div> -->
-                <div class="section-items">
-                  <div class="statBox">
-                    <div class="iconBox"> 
+      <div class="section-items">
+        <div class="section">
+          <h1>Stats</h1>
+          <div class="section-items">
+            <!--PizzaHub-->
+            <div class="subsection">
+              <h1 data-tooltip="This section shows the general data of the PizzaHub Franchise">PizzaHub</h1>
+              <!-- <div id="statsOverview" class="diagram"></div> -->
+              <div class="section-items">
+                <div class="statBox">
+                  <div class="iconBox">
                     <i class="fas fa-shopping-bag"></i>
                   </div>
-                    <h2>Sales<h2>
-                    <p>1234</p>
-                  </div>
-                  <div class="statBox">
-                    <div class="iconBox"> 
+                  <h2>Sales<h2>
+                      <p>1234</p>
+                </div>
+                <div class="statBox">
+                  <div class="iconBox">
                     <i class="fas fa-dollar-sign"></i>
                   </div>
-                    <h2>Revenue</h2>
-                    <p>1234</p>
+                  <h2>Revenue</h2>
+                  <p>1234</p>
+                </div>
+                <div class="statBox">
+                  <div class="iconBox">
+                    <i class="fas fa-users"></i>
                   </div>
-                  <div class="statBox">
-                    <div class="iconBox"> 
-                      <i class="fas fa-users"></i>
-                    </div>
-                    <h2>Customers</h2>
-                    <p>1234</p>
+                  <h2>Customers</h2>
+                  <p>1234</p>
+                </div>
+                <div class="statBox">
+                  <div class="iconBox">
+                    <i class="fas fa-chart-line"></i>
                   </div>
-                  <div class="statBox">
-                    <div class="iconBox"> 
-                      <i class="fas fa-chart-line"></i>
-                    </div>
-                    <h2>Placeholder</h2>
-                    <p>1234</p>
-                  </div>
+                  <h2>Placeholder</h2>
+                  <p>1234</p>
                 </div>
               </div>
-              <!--Customers-->
-              <div class="subsection">
-                 <h1>Customers</h1>
-                 <div class="section-items">
-                  <div class="statBox">
-                    <div id="stat-item"></div>
-                    <h2>Placeholder</h2>
-                    <p>1234</p>
-                  </div>
-                  <div class="statBox">
-                    <h2>Order Value</h2>
-                    <p>1234</p>
-                  </div>
-                  <div class="statBox">
-                    <h2>PizzaOrder</h2>
-                    <p>1234</p>
-                  </div>
-                  <div class="statBox">
-                    <h2>Places</h2>
-                    <p>1234</p>
-                  </div>
-                </div> 
+            </div>
+            <!--Customers-->
+            <div class="subsection">
+              <h1>Customers</h1>
+              <div class="section-items">
+                <div class="statBox">
+                  <div id="stat-item"></div>
+                  <h2>Placeholder</h2>
+                  <p>1234</p>
+                </div>
+                <div class="statBox">
+                  <h2>Order Value</h2>
+                  <p>1234</p>
+                </div>
+                <div class="statBox">
+                  <h2>PizzaOrder</h2>
+                  <p>1234</p>
+                </div>
+                <div class="statBox">
+                  <h2>Places</h2>
+                  <p>1234</p>
+                </div>
               </div>
             </div>
           </div>
         </div>
+      </div>
       <!--End of Stats section-->
       <!--Revenue section-->
-        <div class="section-items">
-          <div class="section">
-            <div class="section-items">
-              <div class="btnbox">
-                <button class="btn" id="bestButton" style="z-index: 99;">STABLE</button>
-                <button class="btn" id="worstButton" style="z-index: 99;">UNSTABLE</button>
-                <button class="btn" id="customButton" style="z-index: 99;">CUSTOM</button>
-              </div>
-              <h1 class="centered">Revenue</h1><h2 data-tooltip="The right chart shows the revenue with your chosen condition. You can choose between the buttons 
-                'STABLE','UNSTABLE','CUSTOM'. You can add stores by clicking those in the bar chart to the right." id="revenueTitle">Store Revenues</h2></h2>
+      <div class="section-items">
+        <div class="section">
+          <div class="section-items">
+            <div class="btnbox">
+              <button class="btn" id="bestButton" style="z-index: 99;" onclick="bestButton();">STABLE</button>
+              <button class="btn" id="worstButton" style="z-index: 99;" onclick="worstButton();">UNSTABLE</button>
+              <button class="btn" id="customButton" style="z-index: 99;" onclick="customButton();">CUSTOM</button>
             </div>
-            <div class="section-items">
-              <div class="subsection">
-                <div id="revenue" class="diagram"></div>
-              </div> 
-              <div class="subsection">
-                  <div id="revenueBar" class="diagram" style="height: 100%"></div>
-              </div>
+            <h1 class="centered">Revenue</h1>
+            <h2 data-tooltip="The right chart shows the revenue with your chosen condition. You can choose between the buttons 
+                'STABLE','UNSTABLE','CUSTOM'. You can add stores by clicking those in the bar chart to the right."
+              id="revenueTitle">Store Revenues</h2>
+            </h2>
+          </div>
+          <div class="section-items">
+            <div class="subsection">
+              <div id="revenue" class="diagram"></div>
+            </div>
+            <div class="subsection">
+              <div id="revenueBar" class="diagram" style="height: 100%"></div>
             </div>
           </div>
         </div>
-        <!--End of Revenue section-->
-        <!--Bottom section-->
-        <div class="section-items">
-          <div class="subsection">
-            <div id="pizzaPopularity" class="diagram" style="height: auto;"></div>
-          </div>
-          <div class="subsection">
-            <div class="pizzaRankingChart">
-          </div>
-          </div>
-          <div class="subsection">
-            <h2 data-tooltip="This is the a Map showing all Stores" id="mapTitel">Store locations</h2>
-            <div id="map" class="diagram"></div>  
-          </div>
-        </div>
-        <!--End of Bottom section-->
-      <!-- END OF CONTENT-->
       </div>
+      <!--End of Revenue section-->
+      <!--Bottom section-->
+      <div class="section-items">
+        <div class="subsection">
+          <div id="pizzaPopularity" class="diagram" style="height: auto;"></div>
+        </div>
+        <div class="subsection">
+          <div class="pizzaRankingChart">
+          </div>
+        </div>
+        <div class="subsection">
+          <h2 data-tooltip="This is the a Map showing all Stores" id="mapTitel">Store locations</h2>
+          <div id="map" class="diagram"></div>
+        </div>
+      </div>
+      <!--End of Bottom section-->
+      <!-- END OF CONTENT-->
+    </div>
 
 
     <script>
-      visibilityCoustomDate()
-      bestButton();
-      worstButton();
-      customButton();
-      timeButtons();
-      customDate();
-    document.getElementById("bestButton").addEventListener("click", bestButton);
-    document.getElementById("worstButton").addEventListener("click", worstButton);
-    document.getElementById("customButton").addEventListener("click", customButton);
+      visibilityCoustomDate();
 
-    if (firstClick) {
-      setActiveButton("bestButton");
-      bestButton();
-    }
+      if (firstClick) {
+        setActiveButton("bestButton");
+        bestButton();
+      }
+
       function toggleSidebar(turnOff = false) {
         if (turnOff) {
           document.getElementById("sidebar").classList.remove("active");
           document.getElementById("main").classList.remove("active");
         } else {
-        document.getElementById("sidebar").classList.toggle("active");
-        document.getElementById("main").classList.toggle("active");
-      }      
+          document.getElementById("sidebar").classList.toggle("active");
+          document.getElementById("main").classList.toggle("active");
         }
+      }
     </script>
     <script>
-      const map = L.map('map', {attributionControl: false}).setView([39, -120], 5);
+      const map = L.map('map', { attributionControl: false }).setView([39, -120], 5);
       storeLocationMap();
-      
+
       //statOverview();
-      
+
       pizzaPopularity();
-      revenueChart();
     </script>
-  </body>
+</body>
+
 </html>
