--- a/src/frontend/views/store.html
+++ b/src/frontend/views/store.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="/style/diagram.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap" />
   
-  <script src="/static/echarts/infographic.js"type="text/javascript"></script>
+  <!--<script src="/static/echarts/infographic.js"type="text/javascript"></script>-->
   <script src="/static/echarts/echarts.js"></script>
   <script src="/static/charts/storeCharts.js" type="text/javascript"></script>
   <script src="/static/UI/ui.js" type="text/javascript"></script>
