fixed some charts not showing up

--- a/src/frontend/views/franchise.html
+++ b/src/frontend/views/franchise.html
@@ -155,7 +155,7 @@
       <!--Bottom section-->
       <div class="section-items">
         <div class="subsection">
-          <div id="pizzaPopularity" class="diagram" style="height: auto;"></div>
+          <div id="pizzaPopularity" class="diagram" sstyle="height: 100%"width="100%"></div>
         </div>
         <div class="subsection">
           <div class="pizzaRankingChart">
