--- a/src/frontend/views/store.html
+++ b/src/frontend/views/store.html
@@ -112,26 +112,26 @@
           <h1>Pizza</h1>
           <div class="section-items">
             <div class="subsection">
-              <div id="abcAnalysis_pizza_1" class="diagram">
+              <div id="abcAnalysis_pizza_1" class="diagram" style="height: 100%"width="100%">
                 ABC Analaysis
               </div>
             </div>
             <div class="subsection">
-              <div id="PizzaSize" class="diagram">
+              <div id="PizzaSize" class="diagram"style="height: 100%">
                 ordered PizzaSizes
               </div>
             </div>
           </div>
           <div class="section-items">
             <div class="subsection">
-              <div id="pizzaRanking" class="diagram">
+              <div id="pizzaRanking" class="diagram"style="height: 100%">
                 Pizza Ranking
               </div>
             </div>
           </div>
           <div class="section-items">
             <div class="subsection">
-              <div id="Heatmap" class="diagram">
+              <div id="Heatmap" class="diagram"style="height: 100%">
                 Common Pizza Combinations 
               </div>
             </div>
@@ -143,7 +143,7 @@
           </div>
           <div class="section-items">
             <div class="subsection">
-              <div id="pizza_price_popularity" class="diagram">
+              <div id="pizza_price_popularity" class="diagram"style="height: 100%" width="100%">
                 Relationship between price and popularity of pizzas
               </div>
             </div>
@@ -219,7 +219,7 @@
                   </div>
                 </div>
                 <div class="subsection">
-                  <div class="diagram" id="quality">
+                  <div class="diagram" id="quality"style="height: 100%"width="100%">
                    Quality
                   </div>
                 </div>
