store.ts pizza_price_popularity();

--- a/src/frontend/views/store.html
+++ b/src/frontend/views/store.html
@@ -260,6 +260,7 @@
         pizzaSize();
         heatmap();
         abcAnalysis_pizza_1();
+        pizza_price_popularity();
         //monthlyRevenue();
         function toggleSidebar(turnOff = false) {
           if (turnOff) {
