--- a/src/frontend/views/store.html
+++ b/src/frontend/views/store.html
@@ -111,7 +111,7 @@
         <div class="subsection">
           <h1>Pizza</h1>
           <div class="section-items">
-            <div class="subsection">
+            <div class="subsection" style="height: 300px;">
               <div id="abcAnalysis_pizza_1" class="diagram" style="height: 100%"width="100%">
                 ABC Analaysis
               </div>
@@ -130,8 +130,8 @@
             </div>
           </div>
           <div class="section-items">
-            <div class="subsection">
-              <div id="Heatmap" class="diagram"style="height: 100%">
+            <div class="subsection" style="height: 300px;">
+              <div id="Heatmap" class="diagram" >
                 Common Pizza Combinations 
               </div>
             </div>
@@ -143,7 +143,7 @@
           </div>
           <div class="section-items">
             <div class="subsection">
-              <div id="pizza_price_popularity" class="diagram"style="height: 100%" width="100%">
+              <div id="pizza_price_popularity" class="diagram">
                 Relationship between price and popularity of pizzas
               </div>
             </div>
@@ -152,9 +152,7 @@
         <!--End of Pizza section-->
         <!--Forecast section-->
         <!--TODO-->
-        <div class="subsection" style="
-        padding: 0px; 
-        border-width: 0px;">
+        <div class="subsection" style="padding: 0px; border-width: 0px;">
           <div class="section-items">
             <div class="subsection" style="
               margin-top: 0px;
@@ -173,7 +171,7 @@
               </div>
               <div class="section-items">
                 <div class="subsection">
-                  <div id="dailyOrders" class="diagram">
+                  <div id="dailyOrders" class="diagram" style= "100%">
                     Order Prediction
                   </div>
                 </div>
@@ -218,8 +216,8 @@
                     ABC Analaysis
                   </div>
                 </div>
-                <div class="subsection">
-                  <div class="diagram" id="quality"style="height: 100%"width="100%">
+                <div class="subsection" style="height: 400px;">
+                  <div class="diagram" id="quality" style="height: 100%"width="100%">
                    Quality
                   </div>
                 </div>
