--- a/src/frontend/views/franchise.html
+++ b/src/frontend/views/franchise.html
@@ -155,15 +155,20 @@
       <!--Bottom section-->
       <div class="section-items">
         <div class="subsection">
-          <div id="pizzaPopularity" class="diagram" sstyle="height: 100%"width="100%"></div>
+          <div id="pizzaPopularity" class="diagram"></div>
         </div>
-        <div class="subsection">
-          <div class="pizzaRankingChart">
+        <div class="pizzaRankingChart"></div>
+
+        <div class="section-items" style="width: 50%;">
+          <div class="subsection">
+            <h2>Placeholder</h2>
+            <div class="diagram"></div>
           </div>
-        </div>
-        <div class="subsection">
-          <h2 data-tooltip="This is the a Map showing all Stores" id="mapTitel">Store locations</h2>
-          <div id="map" class="diagram"></div>
+          <div class="subsection">
+            <!--<h2 data-tooltip="This is the a Map showing all Stores" id="mapTitel">Store locations</h2>-->
+            <h2 id="mapTitel">Store locations</h2>
+            <div id="map" class="diagram"></div>
+          </div>
         </div>
       </div>
       <!--End of Bottom section-->
