--- a/src/frontend/views/store.html
+++ b/src/frontend/views/store.html
@@ -54,7 +54,7 @@
       <!--Stats section-->
       <div class="section-items">
         <div class="section">
-          <h1>Stats</h1>
+          <h1>Orders</h1>
           <div class="section-items">
             <!--PizzaHub-->
             <div class="subsection">
@@ -73,18 +73,18 @@
                   <p id="sCustomers">1234</p>
                 </div>
                 <div class="statBox">
-                  <h2>Placeholder</h2>
+                  <h2>Pizzas sold</h2>
                   <p>1234</p>
                 </div>
               </div>
             </div>
             <!--Customers-->
             <div class="subsection">
-              <h1>Customers</h1>
+              <h1>Average Customer</h1>
               <div class="section-items">
                 <div class="statBox">
                   <div id="stat-item"></div>
-                  <h2>Placeholder</h2>
+                  <h2>Orders</h2>
                   <p>1234</p>
                 </div>
                 <div class="statBox">
@@ -92,11 +92,11 @@
                   <p id="oValue">1234</p>
                 </div>
                 <div class="statBox">
-                  <h2>PizzaOrder</h2>
+                  <h2>Pizzas per Order</h2>
                   <p>1234</p>
                 </div>
                 <div class="statBox">
-                  <h2>Places</h2>
+                  <h2>Order frequency</h2>
                   <p>1234</p>
                 </div>
               </div>
