fixed Custom date button

--- a/src/frontend/views/franchise.html
+++ b/src/frontend/views/franchise.html
@@ -42,8 +42,9 @@
       <button class="btn" id="Last-Month" onclick="mtd();">MTD</button>
       <button class="btn" id="Last-Quarter" onclick="qtd();">QTD</button>
       <button class="btn" id="Last-Year" onclick="ytd();">YTD</button>
-      <button class="btn" id="customDate" onclick="setActiveButton('customDate')">PTD</button>
+      <button class="btn" id="customDate" onclick="visibilityCoustomDate()">PTD</button>
       <input type="date" id="datePicker" style="display: none;">
+      <input type="date" id="startDate" name="startDate" value="2022-12-01"style="display: none;" required>
     </div>
     <div class="btnbox">
       <button class="infobox" id="FROM">FROM: XX-XX-XXXX</button>
