chore: Update ABC Analysis section titles in store views

--- a/src/frontend/views/individualStore.html
+++ b/src/frontend/views/individualStore.html
@@ -99,7 +99,7 @@
     <div id="abcAnalysis_customer_2" style="width: 600px; height: 600px"></div>
   </div>
   <div class="s2Container" style="width: 50%; height: fit-content">
-    <h1 data-tooltip="This is the ABC analysis section">ABC Analysis</h1>
+    <h1 data-tooltip="ABC Analysis of Pizza by Cumulative Percentage">ABC Analysis</h1>
     <div id="abcAnalysis_pizza_1" style="width: 600px; height: 600px"></div>
   </div>
 </div>
