--- a/src/frontend/views/store.html
+++ b/src/frontend/views/store.html
@@ -114,7 +114,7 @@
           <div class="section-items">
             <div class="subsection" style="height: 300px;">
               <div id="abcAnalysis_pizza_1" class="diagram" style="height: 100%"width="100%">
-                ABC Analaysis
+                ABC Analysis of Pizza by Cumulative Percentage
               </div>
             </div>
             <div class="subsection">
@@ -139,7 +139,7 @@
           </div>
           <div class="section-items">
             <div class="subsection">
-              <div id="pizza_price_popularity" class="diagram">
+              <div id="pizza_price_popularity" class="diagram" style="height: 100%"width="100%">
                 Relationship between price and popularity of pizzas
               </div>
             </div>
