--- a/src/frontend/views/store.html
+++ b/src/frontend/views/store.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <!--EINZELNER STORE MIT STOREID !-->
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="/style/container.css" />
   <link rel="stylesheet" type="text/css" href="/style/diagram.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap" />
-  
+
   <!--<script src="/static/echarts/infographic.js"type="text/javascript"></script>-->
   <script src="/static/echarts/echarts.js"></script>
   <script src="/static/charts/storeCharts.js" type="text/javascript"></script>
@@ -36,7 +37,7 @@
       <button class="btn" id="Last-Year" onclick="ytd();">YTD</button>
       <button class="btn" id="customDate" onclick="visibilityCoustomDate()">PTD</button>
       <input type="date" id="datePicker" style="display: none;">
-      <input type="date" id="startDate" name="startDate" value="2022-12-01"style="display: none;" required>
+      <input type="date" id="startDate" name="startDate" value="2022-12-01" style="display: none;" required>
     </div>
     <div class="btnbox">
       <button class="infobox">FROM: XX-XX-XXXX</button>
@@ -113,12 +114,12 @@
           <h1>Pizza</h1>
           <div class="section-items">
             <div class="subsection" style="height: 300px;">
-              <div id="abcAnalysis_pizza_1" class="diagram" style="height: 100%"width="100%">
+              <div id="abcAnalysis_pizza_1" class="diagram" style="height: 100%" width="100%">
                 ABC Analaysis
               </div>
             </div>
             <div class="subsection">
-              <div id="PizzaSize" class="diagram"style="height: 100%">
+              <div id="PizzaSize" class="diagram" style="height: 100%">
                 ordered PizzaSizes
               </div>
             </div>
@@ -132,8 +133,8 @@
           </div>
           <div class="section-items">
             <div class="subsection" style="height: 300px;">
-              <div id="Heatmap" class="diagram" >
-                Common Pizza Combinations 
+              <div id="Heatmap" class="diagram">
+                Common Pizza Combinations
               </div>
             </div>
           </div>
@@ -167,7 +168,7 @@
               </div>
               <div class="section-items">
                 <div class="subsection">
-                  <div id="dailyOrders" class="diagram" style= "100%">
+                  <div id="dailyOrders" class="diagram">
                     Order Prediction
                   </div>
                 </div>
@@ -175,27 +176,32 @@
               <div class="section-items">
                 <div class="subsection">
                   <div class="diagram">
-                    Ingredient Prediction  
+                    Ingredient Prediction
                   </div>
                 </div>
               </div>
               <div class="section-items">
-                <div class="statBox">
-                  <div id="stat-item"></div>
-                  <h2>Placeholder A</h2>
-                  <p>1234</p>
-                </div>
-                <div class="statBox">
-                  <h2>Order Value B</h2>
-                  <p>1234</p>
-                </div>
-                <div class="statBox">
-                  <h2>PizzaOrder C</h2>
-                  <p>1234</p>
-                </div>
-                <div class="statBox">
-                  <h2>Places D</h2>
-                  <p>1234</p>
+                <div class="section">
+                  <h2>Stats</h2>
+                  <div class="section-items">
+                    <div class="statBox">
+                      <div id="stat-item"></div>
+                      <h2>Pizzas</h2>
+                      <p>1234</p>
+                    </div>
+                    <div class="statBox">
+                      <h2>Revenue</h2>
+                      <p>1234</p>
+                    </div>
+                    <div class="statBox">
+                      <h2>Orders</h2>
+                      <p>1234</p>
+                    </div>
+                    <div class="statBox">
+                      <h2>Customers</h2>
+                      <p>1234</p>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -213,28 +219,9 @@
                   </div>
                 </div>
                 <div class="subsection" style="height: 400px;">
-                  <div class="diagram" id="quality" style="height: 100%"width="100%">
-                   Quality
+                  <div class="diagram" id="quality" style="height: 100%" width="100%">
+                    Quality
                   </div>
-                </div>
-              </div>
-              <div class="section-items">
-                <div class="statBox">
-                  <div id="stat-item"></div>
-                  <h2>Placeholder A</h2>
-                  <p>1234</p>
-                </div>
-                <div class="statBox">
-                  <h2>Order Value B</h2>
-                  <p>1234</p>
-                </div>
-                <div class="statBox">
-                  <h2>PizzaOrder C</h2>
-                  <p>1234</p>
-                </div>
-                <div class="statBox">
-                  <h2>Places D</h2>
-                  <p>1234</p>
                 </div>
               </div>
             </div>
@@ -247,8 +234,8 @@
 
 
       <script>
-       
-        
+
+
         statOverview();
         gaugeChart();
         pizzaSize();
@@ -265,9 +252,9 @@
             document.getElementById("main").classList.toggle("active");
           }
         }
-        
+
       </script>
-      
+
 </body>
 
 </html>
