Fix merge issue

--- a/src/frontend/views/store.html
+++ b/src/frontend/views/store.html
@@ -114,13 +114,8 @@
           <h1>Pizza</h1>
           <div class="section-items">
             <div class="subsection" style="height: 300px;">
-<<<<<<< HEAD
-              <div id="abcAnalysis_pizza_1" class="diagram" style="height: 100%" width="100%">
-                ABC Analaysis
-=======
               <div id="abcAnalysis_pizza_1" class="diagram" style="height: 100%"width="100%">
                 ABC Analysis of Pizza by Cumulative Percentage
->>>>>>> 3c2eb01061f5c028d0f34541832aebf5d981ff20
               </div>
             </div>
             <div class="subsection">
@@ -219,19 +214,13 @@
               <h1>Customer</h1>
               <div class="section-items">
                 <div class="subsection" >
-                  <div class="diagram" id="abcAnalysis_customer_2"  style="height: 100%" width="100%">
+                  <div class="diagram" id="abcAnalysis_customer_2"  style="height: '100%'; width: '100%'">
                     ABC Analysis of Customers sorted by total Revenue descending
                   </div>
                 </div>
                 <div class="subsection" style="height: 400px;">
-<<<<<<< HEAD
-                  <div class="diagram" id="quality" style="height: 100%" width="100%">
+                  <div class="diagram" id="quality" style="height: '100%'; width: '100%'">
                     Quality
-=======
-                  
-                  <div class="diagram" id="quality" style="height: 100%"width="100%">
-                   Quality
->>>>>>> 3c2eb01061f5c028d0f34541832aebf5d981ff20
                   </div>
                 </div>
               </div>
