--- a/src/frontend/styles/main.css
+++ b/src/frontend/styles/main.css
@@ -140,6 +140,19 @@ body::-webkit-scrollbar {
 
 }
 
+input {
+  background-color: #1b1b1b;
+  width: calc(100% - 6px);
+  color: #ffffff;
+  padding: 8px;
+  border: 1px solid #3a3a3a;
+  margin: 3px;
+  margin-top: 6px;
+  box-sizing: border-box;
+  border-radius: 5px;
+  box-shadow: 0px 4px 2px rgba(0, 0, 0, 0.3);
+}
+
 button {
   transition: 0.3s;
   background-color: #ff4500;
