--- a/src/frontend/views/store.html
+++ b/src/frontend/views/store.html
@@ -114,7 +114,7 @@
           <h1>Pizza</h1>
           <div class="section-items">
             <div class="subsection" style="height: 300px;">
-              <div id="abcAnalysis_pizza_1" class="diagram" style="height: 100%"width="100%">
+              <div id="abcAnalysis_pizza_1" class="diagram" style="height: 100%" width="100%">
                 ABC Analysis of Pizza by Cumulative Percentage
               </div>
             </div>
@@ -140,7 +140,7 @@
           </div>
           <div class="section-items">
             <div class="subsection">
-              <div id="pizza_price_popularity" class="diagram" style="height: 100%"width="100%">
+              <div id="pizza_price_popularity" class="diagram" style="height: 100%" width="100%">
                 Relationship between price and popularity of pizzas
               </div>
             </div>
@@ -212,9 +212,10 @@
             margin-left: 0px;
             margin-right: 0px;">
               <h1>Customer</h1>
+              <input type="text" placeholder="Search..">
               <div class="section-items">
-                <div class="subsection" >
-                  <div class="diagram" id="abcAnalysis_customer_2"  style="height: '100%'; width: '100%'">
+                <div class="subsection">
+                  <div class="diagram" id="abcAnalysis_customer_2" style="height: '100%'; width: '100%'">
                     ABC Analysis of Customers sorted by total Revenue descending
                   </div>
                 </div>
